[Rules] adicionado contexto de valores parking via application.yml

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,3 +9,8 @@ server:
     include-exception: false
     include-stacktrace: never
     include-message: always
+
+parking-value-setting:
+  oneHourValue: 5.00
+  additionalPerHourValue: 2.00
+  dayValue: 20.00
