--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,9 +21,7 @@ spring:
 
 springdoc:
   swagger-ui:
-    path: /doc
-  api-docs:
-    path: /parking/v1
+    path: /api-docs
 
 parking-value-setting:
   oneHourValue: 5.00
