--- a/pom.xml
+++ b/pom.xml
@@ -13,10 +13,18 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>ms-dio-parking</name>
     <description>ms-dio-parking</description>
+
     <properties>
         <java.version>11</java.version>
+        <postgresql.version>42.5.0</postgresql.version>
+        <modelmapper.version>3.1.0</modelmapper.version>
+        <lombok.version>1.18.24</lombok.version>
+        <testcontainers-psql.version>1.17.3</testcontainers-psql.version>
+        <springdoc.version>1.6.11</springdoc.version>
     </properties>
+
     <dependencies>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -47,24 +55,25 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
+            <version>${postgresql.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.modelmapper</groupId>
             <artifactId>modelmapper</artifactId>
-            <version>3.1.0</version>
+            <version>${modelmapper.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.24</version>
+            <version>${lombok.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-ui</artifactId>
-            <version>1.6.9</version>
+            <version>${springdoc.version}</version>
         </dependency>
 
         <dependency>
@@ -76,7 +85,7 @@
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>postgresql</artifactId>
-            <version>1.17.3</version>
+            <version>${testcontainers-psql.version}</version>
             <scope>test</scope>
         </dependency>
 
