--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,6 +22,7 @@ spring:
 springdoc:
   swagger-ui:
     path: /api-docs
+    supported-submit-methods: []
 
 parking-value-setting:
   oneHourValue: 5.00
